--- a/src/styles/Wrapper.css
+++ b/src/styles/Wrapper.css
@@ -3,9 +3,9 @@
     background: #ECEFF1;
     height: 100%;
     display: flex;
-    flex-flow: row wrap;
+    flex-wrap: wrap;
     padding: 20px;
-    justify-content: space-around;
-    align-content: flex-start;
+    justify-content: space-between;
+   
     overflow: auto;
   }
