--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,6 +1,6 @@
 footer {
   padding: 20px;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  background-color: #10a2eb;
-  color: #ffffff;
+  background-image: linear-gradient(180deg,  rgb(216, 221, 221), rgba(102, 127, 128, 0.897));
+  color: #29579c;
   }
