--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,12 +1,12 @@
 .card {
   flex: 0 1 24%;
   background: #fff;
-  border-radius: 2px;
+  border-radius: 20px;
   height: 325px;
   margin: 1rem;
   position: relative;
   width: 325px;
-  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  box-shadow: 0 5px 10px rgb(36, 35, 35), 0 5px 10px rgb(37, 37, 37);
   text-align: left;
 }
 
@@ -14,7 +14,7 @@
   height: 60%;
   overflow: hidden;
   text-align: center;
-  background:#6CADDC;
+  
 }
 .card > .img-container > img {
   width: 100%
