--- a/src/styles/Wrapper.css
+++ b/src/styles/Wrapper.css
@@ -1,11 +1,11 @@
 .wrapper {
     padding-top: 50px;
-    background: #ECEFF1;
+    
     height: 100%;
     display: flex;
     flex-wrap: wrap;
     padding: 20px;
-    justify-content: space-between;
+    justify-content: space-around;
    
     overflow: auto;
   }
