--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,7 +1,7 @@
 .card {
   flex: 0 1 24%;
-  background: #fff;
-  border-radius: 20px;
+  background: rgb(5, 5, 5);
+  border-radius: 5px;
   height: 325px;
   margin: 1rem;
   position: relative;
@@ -14,6 +14,7 @@
   height: 60%;
   overflow: hidden;
   text-align: center;
+  border-radius: 5px;
   
 }
 .card > .img-container > img {
